comments in data prep

--- a/Hybrid_Era_Analysis.ipynb
+++ b/Hybrid_Era_Analysis.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {
     "tags": []
    },
@@ -271,15 +271,22 @@
     "# DATA PREPARATION\n",
     "class FormulaOneDataPreper:\n",
     "    def __init__(self, start, end, cache=True):\n",
+    "        # SPECIFIED YEARS THAT WILL BE PREPPED\n",
     "        self.start = start\n",
     "        self.end = end\n",
+    "\n",
     "        self.hybrid_schs = {}\n",
     "        self.events = {}\n",
     "        self.event_data = {}\n",
     "\n",
+    "        # CHECK IF CACHE IS ENABLED\n",
     "        if cache:\n",
     "            fastf1.Cache.enable_cache('./cache')   # optional but recommended\n",
     "\n",
+    "    \"\"\"\n",
+    "    Retrive the event schedule for the years specified in the constructor.\n",
+    "    If no years are specified, the schedule for all years (start - end) will be retrieved.\n",
+    "    \"\"\"\n",
     "    def get_schs(self, **kwargs):\n",
     "        year = kwargs.get('year')\n",
     "\n",
@@ -288,22 +295,33 @@
     "            for i in range(self.start, self.end):\n",
     "                self.hybrid_schs[i] = fastf1.get_event_schedule(i, include_testing=False)\n",
     "        elif year in range(self.start, self.end):\n",
+    "            # YEAR REQUESTED IS WITHIN THE DATA RANGE\n",
     "            self.hybrid_schs[year] = fastf1.get_event_schedule(year, include_testing=False)\n",
     "        else:\n",
+    "            # YEAR REQUESTED IS OUTSIDE THE DATA RANGE\n",
     "            print (f\"Year {year} is outside of the data range {self.start} - {self.end}\")\n",
     "\n",
+    "    \"\"\"\n",
+    "    Pull all events from schedules and store them in a dictionary. {year: [events]}\n",
+    "    THIS MIGHT BE REDUNDANT AND UNNECESSARY\n",
+    "    \"\"\"\n",
     "    def get_events(self, **kwargs):\n",
     "        year = kwargs.get('year')\n",
     "        event = kwargs.get('event')\n",
     "\n",
     "        if year is None and event is None:\n",
+    "            # NO YEAR OR EVENT SPECIFIED, GET ALL EVENTS FOR ALL PREPPED YEARS\n",
     "            for i in range(self.start, self.end):\n",
     "                self.events[i] = list(self.hybrid_schs[i]['EventName'])\n",
     "        elif year is None:\n",
+    "            # NO YEAR SPECIFIED, GET ALL EVENTS FOR THE SPECIFIED EVENT\n",
+    "            # CURRENTLY NOT IMPLEMENTED\n",
     "            return f\"Year not specified for event {event}\"\n",
     "        elif event is None:\n",
+    "            # NO EVENT SPECIFIED, GET ALL EVENTS FOR THE SPECIFIED YEAR\n",
     "            self.events[year] = list(self.hybrid_schs[year]['EventName'])\n",
     "        else:\n",
+    "            # SPECIFIED YEAR AND EVENT, GET THE SPECIFIED EVENT\n",
     "            try:\n",
     "                year in self.hybrid_schs[year]\n",
     "            except Exception:\n",
@@ -315,15 +333,21 @@
     "                else:\n",
     "                    print(f\"Event {event} not found in year {year}\")\n",
     "\n",
+    "    \"\"\"\n",
+    "    Collect the data for the specified years and events and or sessions.\n",
+    "    Defaults to all years and events and session R.\n",
+    "    \"\"\"\n",
     "    def get_event_data(self, **kwargs):\n",
     "        year = kwargs.get('year')\n",
     "        event = kwargs.get('event')\n",
     "        session = kwargs.get('session')\n",
     "\n",
+    "        # NO SESSION REQUESTED, DEFAULT\n",
     "        if session is None:\n",
     "            session = 'R'\n",
     "\n",
     "        if year is None and event is None:\n",
+    "            # NO YEAR OR EVENT SPECIFIED, GET ALL EVENTS FOR ALL SCHEDULED YEARS\n",
     "            for i in range(self.start, self.end):\n",
     "                if i in self.events:\n",
     "                    for event in self.events[i]:\n",
@@ -332,8 +356,10 @@
     "                        results = data.results\n",
     "                        self.event_data[i] = {event: results}\n",
     "                else:\n",
+    "                    # SCHEDULE FOR YEAR NOT LOADED\n",
     "                    print(f\"Schedules for year {i} not found, please run get_schs() first.\")\n",
     "        elif year is None:\n",
+    "            # NO YEAR SPECIFIED, GET ALL EVENTS FOR THE SPECIFIED EVENT\n",
     "            for i in range(self.start, self.end):\n",
     "                if i in self.events:\n",
     "                    if event in self.events[i]:\n",
@@ -342,10 +368,13 @@
     "                        results = data.results\n",
     "                        self.event_data[i] = {event: results}\n",
     "                    else:\n",
+    "                        # EVENT NOT FOUND IN SCHEDULE FOR YEAR\n",
     "                        print(f\"Event {event} not found in year {i}.\")\n",
     "                else:\n",
+    "                    # SCHEDULE FOR YEAR NOT LOADED\n",
     "                    print(f\"Schedule for year {i} not found, check that you have the correct year (data will not be loaded).\")\n",
     "        elif event is None:\n",
+    "            # NO EVENT SPECIFIED, GET ALL EVENTS FOR THE SPECIFIED YEAR\n",
     "            if year in self.events:\n",
     "                for event in self.events[year]:\n",
     "                    data = fastf1.get_session(year, event, session)\n",
@@ -353,8 +382,10 @@
     "                    results = data.results\n",
     "                    self.event_data[year] = {event: results}\n",
     "            else:\n",
+    "                # SCHEDULE FOR YEAR NOT LOADED\n",
     "                print(f\"Schedule for year {year} not found, check that you have the correct year (data will not be loaded).\")\n",
     "        else:\n",
+    "            # SPECIFIED YEAR, EVENT, SESSION. GET THE SPECIFIED EVENT\n",
     "            data = fastf1.get_session(year, event, session)\n",
     "            data.load()\n",
     "            results = data.results\n",
@@ -363,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -458,73 +489,7 @@
       "Schedules for year 2019 not found, please run get_schs() first.\n",
       "Schedules for year 2020 not found, please run get_schs() first.\n",
       "Schedules for year 2021 not found, please run get_schs() first.\n",
-      "Schedules for year 2022 not found, please run get_schs() first.\n",
-      "{2015: 'Australian Grand Prix'}\n",
-      "{2015: {'x':    DriverNumber BroadcastName Abbreviation        TeamName TeamColor  \\\n",
-      "6             6                        ROS        Mercedes             \n",
-      "44           44                        HAM        Mercedes             \n",
-      "77           77                        BOT        Williams             \n",
-      "26           26                        KVY        Red Bull             \n",
-      "3             3                        RIC        Red Bull             \n",
-      "19           19                        MAS        Williams             \n",
-      "27           27                        HUL     Force India             \n",
-      "11           11                        PER     Force India             \n",
-      "33           33                        VER      Toro Rosso             \n",
-      "8             8                        GRO        Lotus F1             \n",
-      "13           13                        MAL        Lotus F1             \n",
-      "9             9                        ERI          Sauber             \n",
-      "55           55                        SAI      Toro Rosso             \n",
-      "22           22                        BUT         McLaren             \n",
-      "53           53                        RSS  Manor Marussia             \n",
-      "28           28                        STE  Manor Marussia             \n",
-      "12           12                        NAS          Sauber             \n",
-      "5             5                        VET         Ferrari             \n",
-      "7             7                        RAI         Ferrari             \n",
-      "14           14                        ALO         McLaren             \n",
-      "\n",
-      "    FirstName    LastName          FullName  Position  GridPosition  Q1  Q2  \\\n",
-      "6        Nico     Rosberg      Nico Rosberg       1.0           1.0 NaT NaT   \n",
-      "44      Lewis    Hamilton    Lewis Hamilton       2.0           2.0 NaT NaT   \n",
-      "77   Valtteri      Bottas   Valtteri Bottas       3.0           6.0 NaT NaT   \n",
-      "26     Daniil       Kvyat      Daniil Kvyat       4.0           4.0 NaT NaT   \n",
-      "3      Daniel   Ricciardo  Daniel Ricciardo       5.0           5.0 NaT NaT   \n",
-      "19     Felipe       Massa      Felipe Massa       6.0           7.0 NaT NaT   \n",
-      "27       Nico  Hülkenberg   Nico Hülkenberg       7.0          10.0 NaT NaT   \n",
-      "11     Sergio       Pérez      Sergio Pérez       8.0           9.0 NaT NaT   \n",
-      "33        Max  Verstappen    Max Verstappen       9.0           8.0 NaT NaT   \n",
-      "8      Romain    Grosjean   Romain Grosjean      10.0          12.0 NaT NaT   \n",
-      "13     Pastor   Maldonado  Pastor Maldonado      11.0          13.0 NaT NaT   \n",
-      "9      Marcus    Ericsson   Marcus Ericsson      12.0          14.0 NaT NaT   \n",
-      "55     Carlos       Sainz      Carlos Sainz      13.0          11.0 NaT NaT   \n",
-      "22     Jenson      Button     Jenson Button      14.0          20.0 NaT NaT   \n",
-      "53  Alexander       Rossi   Alexander Rossi      15.0          16.0 NaT NaT   \n",
-      "28       Will     Stevens      Will Stevens      16.0          17.0 NaT NaT   \n",
-      "12     Felipe        Nasr       Felipe Nasr      17.0          15.0 NaT NaT   \n",
-      "5   Sebastian      Vettel  Sebastian Vettel      18.0           3.0 NaT NaT   \n",
-      "7        Kimi   Räikkönen    Kimi Räikkönen      19.0          19.0 NaT NaT   \n",
-      "14   Fernando      Alonso   Fernando Alonso      20.0          18.0 NaT NaT   \n",
-      "\n",
-      "    Q3                   Time     Status  Points  \n",
-      "6  NaT 0 days 01:42:35.038000   Finished    25.0  \n",
-      "44 NaT 0 days 01:42:36.992000   Finished    18.0  \n",
-      "77 NaT 0 days 01:42:49.630000   Finished    15.0  \n",
-      "26 NaT 0 days 01:42:51.610000   Finished    12.0  \n",
-      "3  NaT 0 days 01:42:54.720000   Finished    10.0  \n",
-      "19 NaT 0 days 01:42:56.531000   Finished     8.0  \n",
-      "27 NaT 0 days 01:43:00.898000   Finished     6.0  \n",
-      "11 NaT 0 days 01:43:09.381000   Finished     4.0  \n",
-      "33 NaT 0 days 01:43:10.267000   Finished     2.0  \n",
-      "8  NaT 0 days 01:43:12.972000   Finished     1.0  \n",
-      "13 NaT 0 days 01:43:13.576000   Finished     0.0  \n",
-      "9  NaT 0 days 01:43:15.218000   Finished     0.0  \n",
-      "55 NaT 0 days 01:43:23.810000   Finished     0.0  \n",
-      "22 NaT 0 days 01:43:24.252000   Finished     0.0  \n",
-      "53 NaT                    NaT    +2 Laps     0.0  \n",
-      "28 NaT                    NaT    +2 Laps     0.0  \n",
-      "12 NaT                    NaT     Brakes     0.0  \n",
-      "5  NaT                    NaT   Accident     0.0  \n",
-      "7  NaT                    NaT  Collision     0.0  \n",
-      "14 NaT                    NaT    Retired     0.0  }}\n"
+      "Schedules for year 2022 not found, please run get_schs() first.\n"
      ]
     }
    ],
@@ -548,17 +513,47 @@
     "# print(hybrid_data.hybrid_schs)\n",
     "# print(\"-----------------\")\n",
     "# print(\"events\")\n",
-    "print(hybrid_data.events)\n",
+    "# print(hybrid_data.events)\n",
     "# print(\"-----------------\")\n",
     "# print(\"race data\")\n",
-    "print(hybrid_data.event_data)"
+    "# print(hybrid_data.event_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "window.require && require([\"base/js/namespace\"],function(Jupyter){Jupyter.notebook.save_checkpoint()})",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[jovian] Updating notebook \"zoibderg/hybrid-era-analysis\" on https://jovian.ai/\u001b[0m\n",
+      "[jovian] Uploading additional files...\u001b[0m\n",
+      "[jovian] Committed successfully! https://jovian.ai/zoibderg/hybrid-era-analysis\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://jovian.ai/zoibderg/hybrid-era-analysis'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# LETS MAKE ANOTHER JOVIAN COMMIT\n",
     "jovian.commit(project=project_name, filename=project_file, files=[\"explore_ergast.py\",\"explore_ergastpy.py\", \"notebook_source\", \"cache\"])"
