--- a/Hybrid_Era_Analysis.ipynb
+++ b/Hybrid_Era_Analysis.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -125,25 +125,48 @@
       "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] <archive url/path> ...\n",
       "\n",
       "no such option: -u\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "Usage:   \n",
+      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] <requirement specifier> [package-index-options] ...\n",
+      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] -r <requirements file> [package-index-options] ...\n",
+      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] [-e] <vcs project url> ...\n",
+      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] [-e] <local project path> ...\n",
+      "  /Users/austintesch/opt/anaconda3/bin/python -m pip install [options] <archive url/path> ...\n",
+      "\n",
+      "no such option: -u\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
     "%pip install -upgrade pip -quiet\n",
-    "%pip install pyergast -upgrade -quiet"
+    "%pip install pyergast -upgrade -quiet\n",
+    "%pip install jovian -upgrade -quiet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "if (window.IPython && IPython.notebook.kernel) IPython.notebook.kernel.execute('jovian.utils.jupyter.get_notebook_name_saved = lambda: \"' + IPython.notebook.notebook_name + '\"')",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# pyergast requires both numpy and pandas\n",
     "from __future__ import print_function\n",
     "\n",
     "import pprint as pp\n",
+    "import jovian\n",
     "import sys\n",
     "from unittest import result\n",
     "\n",
@@ -153,7 +176,12 @@
     "import pandas as pd\n",
     "from fastf1.core import Laps\n",
     "from IPython.utils import io\n",
-    "from timple.timedelta import strftimedelta"
+    "from timple.timedelta import strftimedelta\n",
+    "\n",
+    "import seaborn as sns\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -165,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,33 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install jovian --upgrade -q"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import jovian"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +231,7 @@
        "'https://jovian.ai/zoibderg/hybrid-era-analysis'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -385,7 +387,7 @@
     "                # SCHEDULE FOR YEAR NOT LOADED\n",
     "                print(f\"Schedule for year {year} not found, check that you have the correct year (data will not be loaded).\")\n",
     "        else:\n",
-    "            # SPECIFIED YEAR, EVENT, SESSION. GET THE SPECIFIED EVENT\n",
+    "            # SPECIFIED YEAR, EVENT,  GET THE SPECIFIED EVENT\n",
     "            data = fastf1.get_session(year, event, session)\n",
     "            data.load()\n",
     "            results = data.results\n",
@@ -394,105 +396,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "core           INFO \tLoading data for Belgian Grand Prix - Race [v2.3.0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Schedules for year 2014 not found, please run get_schs() first.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "core        WARNING \tCannot load laps, telemetry, weather, and message data because the relevant API is not supported for this session.\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['44', '6', '8', '26', '11', '19', '7', '33', '77', '9', '12', '5', '14', '22', '98', '28', '55', '3', '13', '27']\n",
-      "core           INFO \tLoading data for British Grand Prix - Race [v2.3.0]\n",
-      "core        WARNING \tCannot load laps, telemetry, weather, and message data because the relevant API is not supported for this session.\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['44', '6', '5', '19', '77', '26', '27', '7', '11', '14', '9', '98', '28', '55', '3', '33', '8', '13', '22', '12']\n",
-      "core           INFO \tLoading data for Belgian Grand Prix - Race [v2.3.0]\n",
-      "core        WARNING \tCannot load laps, telemetry, weather, and message data because the relevant API is not supported for this session.\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['44', '6', '8', '26', '11', '19', '7', '33', '77', '9', '12', '5', '14', '22', '98', '28', '55', '3', '13', '27']\n",
-      "core           INFO \tLoading data for Italian Grand Prix - Race [v2.3.0]\n",
-      "core        WARNING \tCannot load laps, telemetry, weather, and message data because the relevant API is not supported for this session.\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['44', '5', '19', '77', '7', '11', '27', '3', '9', '26', '55', '33', '12', '22', '28', '98', '6', '14', '8', '13']\n",
-      "core           INFO \tLoading data for Bahrain Grand Prix - Race [v2.3.0]\n",
-      "core        WARNING \tCannot load laps, telemetry, weather, and message data because the relevant API is not supported for this session.\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['44', '7', '6', '77', '5', '3', '8', '11', '26', '19', '14', '12', '27', '9', '13', '28', '98', '33', '55', '22']\n",
-      "core           INFO \tLoading data for Belgian Grand Prix - Race [v2.3.0]\n",
-      "core        WARNING \tCannot load laps, telemetry, weather, and message data because the relevant API is not supported for this session.\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['44', '6', '8', '26', '11', '19', '7', '33', '77', '9', '12', '5', '14', '22', '98', '28', '55', '3', '13', '27']\n",
-      "core           INFO \tLoading data for Italian Grand Prix - Race [v2.3.0]\n",
-      "core        WARNING \tCannot load laps, telemetry, weather, and message data because the relevant API is not supported for this session.\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['44', '5', '19', '77', '7', '11', '27', '3', '9', '26', '55', '33', '12', '22', '28', '98', '6', '14', '8', '13']\n",
-      "core           INFO \tLoading data for Chinese Grand Prix - Race [v2.3.0]\n",
-      "core        WARNING \tCannot load laps, telemetry, weather, and message data because the relevant API is not supported for this session.\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['44', '6', '5', '7', '19', '77', '8', '12', '3', '9', '11', '14', '55', '22', '28', '98', '33', '13', '26', '27']\n",
-      "core           INFO \tLoading data for Belgian Grand Prix - Race [v2.3.0]\n",
-      "core        WARNING \tCannot load laps, telemetry, weather, and message data because the relevant API is not supported for this session.\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['44', '6', '8', '26', '11', '19', '7', '33', '77', '9', '12', '5', '14', '22', '98', '28', '55', '3', '13', '27']\n",
-      "core           INFO \tLoading data for Chinese Grand Prix - Race [v2.3.0]\n",
-      "core        WARNING \tCannot load laps, telemetry, weather, and message data because the relevant API is not supported for this session.\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['44', '6', '5', '7', '19', '77', '8', '12', '3', '9', '11', '14', '55', '22', '28', '98', '33', '13', '26', '27']\n",
-      "core           INFO \tLoading data for Monaco Grand Prix - Race [v2.3.0]\n",
-      "core        WARNING \tCannot load laps, telemetry, weather, and message data because the relevant API is not supported for this session.\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['6', '5', '44', '26', '3', '7', '11', '22', '12', '55', '27', '8', '9', '77', '19', '98', '28', '33', '14', '13']\n",
-      "core           INFO \tLoading data for Hungarian Grand Prix - Race [v2.3.0]\n",
-      "core        WARNING \tCannot load laps, telemetry, weather, and message data because the relevant API is not supported for this session.\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['5', '26', '3', '33', '14', '44', '8', '6', '22', '9', '12', '19', '77', '13', '98', '28', '55', '7', '11', '27']\n",
-      "core           INFO \tLoading data for Bahrain Grand Prix - Race [v2.3.0]\n",
-      "core        WARNING \tCannot load laps, telemetry, weather, and message data because the relevant API is not supported for this session.\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['44', '7', '6', '77', '5', '3', '8', '11', '26', '19', '14', '12', '27', '9', '13', '28', '98', '33', '55', '22']\n",
-      "core           INFO \tLoading data for Belgian Grand Prix - Race [v2.3.0]\n",
-      "core        WARNING \tCannot load laps, telemetry, weather, and message data because the relevant API is not supported for this session.\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['44', '6', '8', '26', '11', '19', '7', '33', '77', '9', '12', '5', '14', '22', '98', '28', '55', '3', '13', '27']\n",
-      "core           INFO \tLoading data for Chinese Grand Prix - Race [v2.3.0]\n",
-      "core        WARNING \tCannot load laps, telemetry, weather, and message data because the relevant API is not supported for this session.\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['44', '6', '5', '7', '19', '77', '8', '12', '3', '9', '11', '14', '55', '22', '28', '98', '33', '13', '26', '27']\n",
-      "core           INFO \tLoading data for Canadian Grand Prix - Race [v2.3.0]\n",
-      "core        WARNING \tCannot load laps, telemetry, weather, and message data because the relevant API is not supported for this session.\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['44', '6', '77', '7', '5', '19', '13', '27', '26', '8', '11', '55', '3', '9', '33', '12', '28', '98', '22', '14']\n",
-      "core           INFO \tLoading data for Monaco Grand Prix - Race [v2.3.0]\n",
-      "core        WARNING \tCannot load laps, telemetry, weather, and message data because the relevant API is not supported for this session.\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['6', '5', '44', '26', '3', '7', '11', '22', '12', '55', '27', '8', '9', '77', '19', '98', '28', '33', '14', '13']\n",
-      "core           INFO \tLoading data for Belgian Grand Prix - Race [v2.3.0]\n",
-      "core        WARNING \tCannot load laps, telemetry, weather, and message data because the relevant API is not supported for this session.\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['44', '6', '8', '26', '11', '19', '7', '33', '77', '9', '12', '5', '14', '22', '98', '28', '55', '3', '13', '27']\n",
-      "core           INFO \tLoading data for Bahrain Grand Prix - Race [v2.3.0]\n",
-      "core        WARNING \tCannot load laps, telemetry, weather, and message data because the relevant API is not supported for this session.\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['44', '7', '6', '77', '5', '3', '8', '11', '26', '19', '14', '12', '27', '9', '13', '28', '98', '33', '55', '22']\n",
-      "core           INFO \tLoading data for Chinese Grand Prix - Race [v2.3.0]\n",
-      "core        WARNING \tCannot load laps, telemetry, weather, and message data because the relevant API is not supported for this session.\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['44', '6', '5', '7', '19', '77', '8', '12', '3', '9', '11', '14', '55', '22', '28', '98', '33', '13', '26', '27']\n",
-      "core           INFO \tLoading data for Mexican Grand Prix - Race [v2.3.0]\n",
-      "core        WARNING \tCannot load laps, telemetry, weather, and message data because the relevant API is not supported for this session.\n",
-      "core           INFO \tFinished loading data for 20 drivers: ['6', '44', '77', '26', '3', '19', '27', '11', '33', '8', '13', '9', '55', '22', '53', '28', '12', '5', '7', '14']\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Schedules for year 2016 not found, please run get_schs() first.\n",
-      "Schedules for year 2017 not found, please run get_schs() first.\n",
-      "Schedules for year 2018 not found, please run get_schs() first.\n",
-      "Schedules for year 2019 not found, please run get_schs() first.\n",
-      "Schedules for year 2020 not found, please run get_schs() first.\n",
-      "Schedules for year 2021 not found, please run get_schs() first.\n",
-      "Schedules for year 2022 not found, please run get_schs() first.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# LOAD DATA FOR ENTIRE HYBRID ERA\n",
     "\n",
@@ -505,55 +411,16 @@
     "\"\"\"\n",
     "\n",
     "hybrid_data = FormulaOneDataPreper(2014, 2023)\n",
-    "hybrid_data.get_schs(year=2015)\n",
-    "hybrid_data.get_events(year=2015, event='Australian Grand Prix')\n",
-    "hybrid_data.get_event_data()\n",
-    "\n",
-    "# print(\"schedule\")\n",
-    "# print(hybrid_data.hybrid_schs)\n",
-    "# print(\"-----------------\")\n",
-    "# print(\"events\")\n",
-    "# print(hybrid_data.events)\n",
-    "# print(\"-----------------\")\n",
-    "# print(\"race data\")\n",
-    "# print(hybrid_data.event_data)"
+    "hybrid_data.get_schs()\n",
+    "hybrid_data.get_events()\n",
+    "hybrid_data.get_event_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": "window.require && require([\"base/js/namespace\"],function(Jupyter){Jupyter.notebook.save_checkpoint()})",
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[jovian] Updating notebook \"zoibderg/hybrid-era-analysis\" on https://jovian.ai/\u001b[0m\n",
-      "[jovian] Uploading additional files...\u001b[0m\n",
-      "[jovian] Committed successfully! https://jovian.ai/zoibderg/hybrid-era-analysis\u001b[0m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'https://jovian.ai/zoibderg/hybrid-era-analysis'"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# LETS MAKE ANOTHER JOVIAN COMMIT\n",
     "jovian.commit(project=project_name, filename=project_file, files=[\"explore_ergast.py\",\"explore_ergastpy.py\", \"notebook_source\", \"cache\"])"
@@ -572,24 +439,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import jovian"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jovian.commit()"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -626,11 +475,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn as sns\n",
-    "import matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
-    "\n",
     "sns.set_style('darkgrid')\n",
     "matplotlib.rcParams['font.size'] = 14\n",
     "matplotlib.rcParams['figure.figsize'] = (9, 5)\n",
@@ -747,15 +591,6 @@
    "metadata": {},
    "source": [
     "Let us save and upload our work to Jovian before continuing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import jovian"
    ]
   },
   {
@@ -943,15 +778,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import jovian"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "jovian.commit()"
    ]
   },
@@ -962,15 +788,6 @@
     "## Inferences and Conclusion\n",
     "\n",
     "**TODO** - Write some explanation here: a summary of all the inferences drawn from the analysis, and any conclusions you may have drawn by answering various questions."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import jovian"
    ]
   },
   {
@@ -1028,15 +845,6 @@
     "Use of the Ergast API is completely free, but you are welcome to [contribute to the annual running costs](https://liberapay.com/ergast). Any contributions above the actual costs will be donated to the [Grand Prix Trust](https://www.grandprixtrust.com/).\n",
     "\n",
     "<figure><img src=\"https://liberapay.com/assets/widgets/donate.svg\" alt=\"\"><figcaption></figcaption></figure>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import jovian"
    ]
   },
   {
