should have solved database issue, staging before rebuild

--- a/Hybrid_Era_Analysis.ipynb
+++ b/Hybrid_Era_Analysis.ipynb
@@ -356,7 +356,7 @@
     "                        data = fastf1.get_session(i, event, session)\n",
     "                        data.load()\n",
     "                        results = data.results\n",
-    "                        self.event_data[i] = {event: results}\n",
+    "                        self.event_data[i] = list({event: results})\n",
     "                else:\n",
     "                    # SCHEDULE FOR YEAR NOT LOADED\n",
     "                    print(f\"Schedules for year {i} not found, please run get_schs() first.\")\n",
@@ -368,7 +368,7 @@
     "                        data = fastf1.get_session(i, event, session)\n",
     "                        data.load()\n",
     "                        results = data.results\n",
-    "                        self.event_data[i] = {event: results}\n",
+    "                        self.event_data[i] = list({event: results})\n",
     "                    else:\n",
     "                        # EVENT NOT FOUND IN SCHEDULE FOR YEAR\n",
     "                        print(f\"Event {event} not found in year {i}.\")\n",
@@ -382,7 +382,7 @@
     "                    data = fastf1.get_session(year, event, session)\n",
     "                    data.load()\n",
     "                    results = data.results\n",
-    "                    self.event_data[year] = {event: results}\n",
+    "                    self.event_data[year] = list({event: results})\n",
     "            else:\n",
     "                # SCHEDULE FOR YEAR NOT LOADED\n",
     "                print(f\"Schedule for year {year} not found, check that you have the correct year (data will not be loaded).\")\n",
@@ -391,7 +391,7 @@
     "            data = fastf1.get_session(year, event, session)\n",
     "            data.load()\n",
     "            results = data.results\n",
-    "            self.event_data[year] = {event: results}"
+    "            self.event_data[year] = list({event: results})"
    ]
   },
   {
