helper functions for data building

--- a/Hybrid_Era_Analysis.ipynb
+++ b/Hybrid_Era_Analysis.ipynb
@@ -159,14 +159,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[jovian] Update Available: 0.2.43 --> 0.2.45\u001b[0m\n",
-      "[jovian] Run `!pip install jovian --upgrade` to upgrade\u001b[0m\n"
-     ]
     }
    ],
    "source": [
@@ -354,58 +346,67 @@
     "\n",
     "        if year is None and event is None:\n",
     "            # NO YEAR OR EVENT SPECIFIED, GET ALL EVENTS FOR ALL SCHEDULED YEARS\n",
-    "            events = {}\n",
-    "            for i in range(self.start, self.end):\n",
-    "                year_stage = {}\n",
-    "                if i in self.events:\n",
-    "                    for event in self.events[i]:\n",
-    "                        data = fastf1.get_session(i, event, session)\n",
-    "                        data.load()\n",
-    "                        results = data.results\n",
-    "                        year_stage[event] = results\n",
-    "                else:\n",
-    "                    # SCHEDULE FOR YEAR NOT LOADED\n",
-    "                    print(f\"Schedules for year {i} not found, please run get_schs() first.\")\n",
-    "                events[i] = year_stage\n",
-    "            self.event_data = events\n",
+    "            self.event_data_all()\n",
     "        elif year is None:\n",
     "            # NO YEAR SPECIFIED, GET ALL EVENTS FOR THE SPECIFIED EVENT\n",
-    "            events = {}\n",
-    "            for i in range(self.start, self.end):\n",
-    "                year_stage = {}\n",
-    "                if i in self.events:\n",
-    "                    if event in self.events[i]:\n",
-    "                        data = fastf1.get_session(i, event, session)\n",
-    "                        data.load()\n",
-    "                        results = data.results\n",
-    "                        year_stage[event] = results\n",
-    "                    else:\n",
-    "                        # EVENT NOT FOUND IN SCHEDULE FOR YEAR\n",
-    "                        print(f\"Event {event} not found in year {i}.\")\n",
-    "                else:\n",
-    "                    # SCHEDULE FOR YEAR NOT LOADED\n",
-    "                    print(f\"Schedule for year {i} not found, check that you have the correct year (data will not be loaded).\")\n",
-    "                events[i] = year_stage\n",
-    "            self.event_data = events\n",
+    "            self.event_data_event(event, session)\n",
     "        elif event is None:\n",
     "            # NO EVENT SPECIFIED, GET ALL EVENTS FOR THE SPECIFIED YEAR\n",
-    "            if year in self.events:\n",
-    "                year_stage = {}\n",
-    "                for event in self.events[year]:\n",
-    "                    data = fastf1.get_session(year, event, session)\n",
-    "                    data.load()\n",
-    "                    results = data.results\n",
-    "                    year_stage[event] = results\n",
-    "                self.event_data[year] = year_stage\n",
-    "            else:\n",
-    "                # SCHEDULE FOR YEAR NOT LOADED\n",
-    "                print(f\"Schedule for year {year} not found, check that you have the correct year (data will not be loaded).\")\n",
+    "            self.event_data_year(year, session)\n",
     "        else:\n",
     "            # SPECIFIED YEAR, EVENT,  GET THE SPECIFIED EVENT\n",
     "            data = fastf1.get_session(year, event, session)\n",
     "            data.load()\n",
     "            results = data.results\n",
-    "            self.event_data[year][event] = results"
+    "            self.event_data[year][event] = results\n",
+    "\n",
+    "    def event_data_all(self):\n",
+    "        events = {}\n",
+    "        for i in range(self.start, self.end):\n",
+    "            year_stage = {}\n",
+    "            if i in self.events:\n",
+    "                for event in self.events[i]:\n",
+    "                    data = fastf1.get_session(i, event, session)\n",
+    "                    data.load()\n",
+    "                    results = data.results\n",
+    "                    year_stage[event] = results\n",
+    "            else:\n",
+    "                # SCHEDULE FOR YEAR NOT LOADED\n",
+    "                print(f\"Schedules for year {i} not found, please run get_schs() first.\")\n",
+    "            events[i] = year_stage\n",
+    "        self.event_data = events\n",
+    "\n",
+    "    def event_data_event(self, event, session):\n",
+    "        events = {}\n",
+    "        for i in range(self.start, self.end):\n",
+    "            year_stage = {}\n",
+    "            if i in self.events:\n",
+    "                if event in self.events[i]:\n",
+    "                    data = fastf1.get_session(i, event, session)\n",
+    "                    data.load()\n",
+    "                    results = data.results\n",
+    "                    year_stage[event] = results\n",
+    "                else:\n",
+    "                    # EVENT NOT FOUND IN SCHEDULE FOR YEAR\n",
+    "                    print(f\"Event {event} not found in year {i}.\")\n",
+    "            else:\n",
+    "                # SCHEDULE FOR YEAR NOT LOADED\n",
+    "                print(f\"Schedule for year {i} not found, check that you have the correct year (data will not be loaded).\")\n",
+    "            events[i] = year_stage\n",
+    "        self.event_data = events\n",
+    "\n",
+    "    def event_data_year(self, year, session):\n",
+    "        if year in self.events:\n",
+    "            year_stage = {}\n",
+    "            for event in self.events[year]:\n",
+    "                data = fastf1.get_session(year, event, session)\n",
+    "                data.load()\n",
+    "                results = data.results\n",
+    "                year_stage[event] = results\n",
+    "            self.event_data[year] = year_stage\n",
+    "        else:\n",
+    "            # SCHEDULE FOR YEAR NOT LOADED\n",
+    "            print(f\"Schedule for year {year} not found, check that you have the correct year (data will not be loaded).\")"
    ]
   },
   {
@@ -1222,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1717,7 +1718,7 @@
        "33 NaT                    NaT    Electronics     0.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
