stage for analysis

--- a/Hybrid_Era_Analysis.ipynb
+++ b/Hybrid_Era_Analysis.ipynb
@@ -657,7 +657,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2020 Season"
+    "## 2020 Season\n",
+    "\n",
+    "As we all know the year of 2020 was a precented year for everyone around the world, and Forumla One was no exception. Due to many changes through the year and inconsistancy in data, we will be omitting this year from the data set for this analysis. \n",
+    "\n",
+    "FastF1 is currently working on interactions with the Formula One API to resolve these issues, you can read more [here](https://github.com/theOehrly/Fast-F1/issues/259)"
    ]
   },
   {
@@ -1311,9 +1315,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "window.require && require([\"base/js/namespace\"],function(Jupyter){Jupyter.notebook.save_checkpoint()})",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[jovian] Updating notebook \"zoibderg/hybrid-era-analysis\" on https://jovian.ai/\u001b[0m\n",
+      "[jovian] Uploading additional files...\u001b[0m\n",
+      "[jovian] Committed successfully! https://jovian.ai/zoibderg/hybrid-era-analysis\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://jovian.ai/zoibderg/hybrid-era-analysis'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# LETS MAKE ANOTHER JOVIAN COMMIT\n",
     "jovian.commit(project=project_name, filename=project_file, files=[\"explore_ergast.py\",\"explore_ergastpy.py\", \"notebook_source\", \"cache\"])"
