tested pulling teams total points scored from event

--- a/Hybrid_Era_Analysis.ipynb
+++ b/Hybrid_Era_Analysis.ipynb
@@ -5289,7 +5289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5308,57 +5308,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TeamName\n",
+       "Mercedes       35.0\n",
+       "Ferrari        26.0\n",
+       "Red Bull       18.0\n",
+       "Williams       15.0\n",
+       "Force India     5.0\n",
+       "Toro Rosso      2.0\n",
+       "Name: Points, dtype: float64"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Identifed issues with the data, seems that the points scored in this year are multiplied by 2,048\n",
-    "# Need to find out if this effects the enirety of the data or just this year\n",
-    "# will check documenttion to see if this is just something that i missed\n",
-    "# if it is just this year, will need to create a function to correct the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for year in hybrid_event_data:\n",
-    "    for event in hybrid_event_data[year]:\n",
-    "        for points in hybrid_event_data[year][event]['Points']:\n",
-    "            print(f\"{year} {event} {points}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(hybrid_event_data[2014]['Australian Grand Prix'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# sum the total amout of points scored by every team\n",
-    "def get_team_points(year):\n",
-    "    team_points = {}\n",
-    "    for event in hybrid_event_data[year]:\n",
-    "        for i in range(len(hybrid_event_data[year][event])):\n",
-    "            team = hybrid_event_data[year][event]['TeamName'][i]\n",
-    "            points = hybrid_event_data[year][event]['Points'][i]\n",
-    "            if team in team_points:\n",
-    "                team_points[team] += points\n",
-    "            else:\n",
-    "                team_points[team] = points\n",
-    "    return team_points\n",
+    "hybrid_event_data.loc[2016, 'Canadian Grand Prix'].Points.unique()\n",
     "\n",
-    "get_team_points(2014)"
+    "# every driver that scored points the the 2016 Canadian Grand Prix\n",
+    "canada_scores = hybrid_event_data.loc[2016, 'Canadian Grand Prix'][hybrid_event_data.loc[2016, 'Canadian Grand Prix'].Points > 0]\n",
+    "# canada_scores\n",
+    "canada_scores_teams = canada_scores.groupby('TeamName').Points.sum()\n",
+    "canada_scores_teams = canada_scores_teams.sort_values(ascending=False)\n",
+    "canada_scores_teams"
    ]
   },
   {
