moved team colors cell

--- a/Hybrid_Era_Analysis.ipynb
+++ b/Hybrid_Era_Analysis.ipynb
@@ -5431,15 +5431,9 @@
     }
    ],
    "source": [
-    "hybrid_event_data.loc[2022, 'Bahrain Grand Prix'].groupby('TeamName').TeamColor.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# SETS TEAM COLORS\n",
+    "# hybrid_event_data.loc[2022, 'Bahrain Grand Prix'].groupby('TeamName').TeamColor.unique()\n",
+    "\n",
     "team_colors = {'Mercedes': '#6cd3bf', \n",
     "'Red Bull Racing': '#1e5bc6', \n",
     "'Ferrari': '#ed1c24',\n",
