--- a/Hybrid_Era_Analysis.ipynb
+++ b/Hybrid_Era_Analysis.ipynb
@@ -5484,7 +5484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -5517,7 +5517,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO** - explore flow of total points through the era"
+    "**TODO** - explore flow of total points through the era\n",
+    "- gather each teams total points for each year"
    ]
   },
   {
