--- a/Hybrid_Era_Analysis.ipynb
+++ b/Hybrid_Era_Analysis.ipynb
@@ -6140,7 +6140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO** - Explore one or more columns by plotting a graph below, and add some explanation about it"
+    "**TODO** - Explore how individual drivers have performed during the hybrid era. "
    ]
   },
   {
@@ -6161,7 +6161,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO** - Explore one or more columns by plotting a graph below, and add some explanation about it"
+    "**TODO** - Explore teams grid positions / finishing positions.\n",
+    "- (Below can be saved for questions section)\n",
+    "- What teams consisantly had higher gird positions? (better quali, better one line preformance)\n",
+    "- What teams showed the most improvements from grid position to finish position? (better race preformance)"
    ]
   },
   {
@@ -6182,7 +6185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO** - Explore one or more columns by plotting a graph below, and add some explanation about it"
+    "**TODO** - Explore reliabality issues that teams had during hybrid era."
    ]
   },
   {
