rename yearly_scores for clarity

--- a/Hybrid_Era_Analysis.ipynb
+++ b/Hybrid_Era_Analysis.ipynb
@@ -5523,7 +5523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -5800,14 +5800,14 @@
        "2022        35.0   170.0          55.0  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# get total amout of points scored by each team in each year\n",
-    "yearly_scores = pd.DataFrame(index=hybrid_event_data.index)\n",
+    "yearly_scores_t = pd.DataFrame(index=hybrid_event_data.index)\n",
     "\n",
     "for year in hybrid_event_data.index:\n",
     "    # print(year)\n",
@@ -5826,10 +5826,10 @@
     "                    year_scores[team] = event_scores_teams[team]\n",
     "    # print(year_scores)\n",
     "    for team in year_scores:\n",
-    "        yearly_scores.loc[year, team] = year_scores[team]\n",
+    "        yearly_scores_t.loc[year, team] = year_scores[team]\n",
     "\n",
-    "yearly_scores = yearly_scores.sort_index()\n",
-    "yearly_scores"
+    "yearly_scores_t = yearly_scores_t.sort_index()\n",
+    "yearly_scores_t"
    ]
   },
   {
@@ -6027,7 +6027,7 @@
    ],
    "source": [
     "# COMBINE TEAMS TO THEIR CURRNENT NAMES\n",
-    "yearly_scores = yearly_scores.rename(columns={'Red Bull': 'Red Bull Racing',\n",
+    "yearly_scores_t = yearly_scores_t.rename(columns={'Red Bull': 'Red Bull Racing',\n",
     "'Alfa Romeo': 'Alfa Romeo Racing ORLEN',\n",
     "'Alfa Romeo Racing': 'Alfa Romeo Racing ORLEN',\n",
     "'Sauber': 'Alfa Romeo Racing ORLEN',\n",
@@ -6039,9 +6039,9 @@
     "'Toro Rosso': 'AlphaTauri'})\n",
     "\n",
     "# combine duplicate columns\n",
-    "yearly_scores = yearly_scores.groupby(yearly_scores.columns, axis=1).sum()\n",
+    "yearly_scores_t = yearly_scores_t.groupby(yearly_scores_t.columns, axis=1).sum()\n",
     "\n",
-    "yearly_scores"
+    "yearly_scores_t"
    ]
   },
   {
@@ -6065,8 +6065,8 @@
    "source": [
     "# plot line graph of yearly scores\n",
     "plt.figure(figsize=(10, 6))\n",
-    "for team in yearly_scores.columns:\n",
-    "    plt.plot(yearly_scores.index, yearly_scores[team], label=team, color=team_colors[team])\n",
+    "for team in yearly_scores_t.columns:\n",
+    "    plt.plot(yearly_scores_t.index, yearly_scores_t[team], label=team, color=team_colors[team])\n",
     "plt.legend(bbox_to_anchor=(1.05, 1), loc='upper left')\n",
     "plt.title('Points Scored Over Time (Hybrid Era)')\n",
     "plt.xlabel('Year')\n",
@@ -6095,9 +6095,9 @@
    "source": [
     "# plot heat map of yearly scores\n",
     "# swap x and y axis\n",
-    "yearly_scores = yearly_scores.transpose()\n",
+    "yearly_scores_t = yearly_scores_t.transpose()\n",
     "plt.figure(figsize=(10, 6))\n",
-    "sns.heatmap(yearly_scores, cmap='YlOrBr', linewidths=.5, annot=True, fmt='.0f')\n",
+    "sns.heatmap(yearly_scores_t, cmap='YlOrBr', linewidths=.5, annot=True, fmt='.0f')\n",
     "plt.title('Points Scored Over Time (Hybrid Era)')\n",
     "plt.xlabel('Team')\n",
     "plt.ylabel('Year')\n",
