want to find clener way to graph drivers scores

--- a/Hybrid_Era_Analysis.ipynb
+++ b/Hybrid_Era_Analysis.ipynb
@@ -6709,7 +6709,8 @@
     "plt.xlabel('Year')\n",
     "plt.ylabel('Points')\n",
     "plt.show()\n",
-    "\n"
+    "\n",
+    "# I WOULD LKE TO FIND A CLEANER WAY TO DO THIS\n"
    ]
   },
   {
